Package preprocess -Modification des classes StopWord, Ngrams, Tokenization et Stemming pour qu'elles puissent fonctionner avec l'API babelnet
BuildPath
-ajout de la bibliothèque lucene-snowball-2.9.1.jar
Suppression de la librairie lucene-analyzer-common-4.6.1.jar

--- a/Lucene/.classpath
+++ b/Lucene/.classpath
@@ -2,11 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/Giovanni/Downloads/lucene-4.6.1/lucene-4.6.1/core/lucene-core-4.6.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Giovanni/Downloads/lucene-4.6.1/lucene-4.6.1/analysis/common/lucene-analyzers-common-4.6.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="E:/Programmes/Program Files (x86)/BabelNet/babelnet-api-2.5.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Giovanni/Desktop/ontosim-vector-model.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Giovanni/Desktop/Copie clé usb/Projets/TER/Library/commonsCli-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Giovanni/Downloads/lucene-2.9.1/lucene-2.9.1/contrib/snowball/lucene-snowball-2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Giovanni/Downloads/lucene-4.6.1/lucene-4.6.1/core/lucene-core-4.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
