- Suppression du package d'exemple - Modification du message d'erreur et suppression de l'exécution d'exemple dans les classes ComputeSim et PreprocessAppli

--- a/Lucene/config/babelnet.var.properties
+++ b/Lucene/config/babelnet.var.properties
@@ -8,4 +8,5 @@
 # babelnet.dir=/home/your_user/BabelNet-2.5
 #
 # babelnet.dir=PUT_BABELNET_DIR 
-babelnet.dir=E:/Programmes/Program Files (x86)/BabelNet
+babelnet.dir=/exmo-data/babelnet/BabelNet-2.5
+#babelnet.dir=/scratch/ismael/BabelNet-2.0.1
