--- a/Lucene/.classpath
+++ b/Lucene/.classpath
@@ -4,7 +4,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/commonsCli-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-snowball-2.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/ontosim-vector-model.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/exmo-data/babelnet/BabelNet-API-2.5/babelnet-api-2.5.jar"/>
+	<classpathentry kind="lib" path="lib/ontosim-vector-model.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-analyzers-2.9.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
