--- a/Lucene/config/jlt.var.properties
+++ b/Lucene/config/jlt.var.properties
@@ -8,8 +8,8 @@
 # /usr/local/share/wordnet-2.1 and /usr/local/share/wordnet-3.0
 #
 # simply put /usr/local/share/wordnet
-#jlt.wordnetPrefix=/opt/WordNet
-jlt.wordnetPrefix=E:/Programmes/Program Files (x86)/WordNet-3.0
+jlt.wordnetPrefix=/opt/WordNet
+#jlt.wordnetPrefix=/scratch/ismael/WordNet
 
 # The version of WordNet to use
 #
